--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                 </div>
                 <div class="project-item">
                     <a href="https://praneeth8888.github.io/js-store/index.html">
-                        <h3>Portfolio Website</h3>
+                        <h3>Online store(JS)</h3>
                         <p>
-                            A responsive portfolio website showcasing my skills, projects, and services. Built with HTML, CSS, and JavaScript.
+                            A responsive online store website Built with HTML, CSS, and JavaScript.
                         </p>
                     </a>
                 </div>
