--- a/online-store/index.html
+++ b/online-store/index.html
@@ -82,21 +82,21 @@
       </div>
       <div class="row">
         <div class="box">
-          <img src="/assets/images/1.png" />
+          <img src="/assests/images/1.png" />
           <h2>Product 1</h2>
           <p>This is the description of the product.</p>
           <h3>Rs 230</h3>
           <button>Add to Cart</button>
         </div>
         <div class="box">
-          <img src="/assets/images/2.png" />
+          <img src="/assests/images/2.png" />
           <h2>Product 2</h2>
           <p>This is the description of the product.</p>
           <h3>Rs 200</h3>
           <button>Add to Cart</button>
         </div>
         <div class="box">
-          <img src="/assets/images/3.png" />
+          <img src="/assests/images/3.png" />
           <h2>Product 3</h2>
           <p>This is the description of the product.</p>
           <h3>Rs 375</h3>
@@ -106,7 +106,7 @@
 
       <div class="row1">
         <div class="box1">
-      <img src="/assets/images/4.png" />
+      <img src="/assests/images/4.png" />
       </div>
       <div class="box1">
         <h2>Product 4</h2>
@@ -122,7 +122,7 @@
       <h2>Rs.300</h2>
       </div>
       <div class="box1">
-    <img src="/assets/images/5.png" />
+    <img src="/assests/images/5.png" />
     </div>
     </div>
     </div>
