--- a/index.html
+++ b/index.html
@@ -68,11 +68,20 @@
                         </p>
                     </a>
                 </div>
+
                 <div class="project-item">
                     <a href="https://praneeth8888.github.io/js-store/index.html">
                         <h3>Online store(JS)</h3>
                         <p>
                             A responsive online store website Built with HTML, CSS, and JavaScript.
+                        </p>
+                    </a>
+                </div>
+                <div class="project-item">
+                    <a href="https://praneeth8888.github.io/bank/index.html">
+                        <h3>Website</h3>
+                        <p>
+                            A simple banking app to manage accounts, transactions, and balances. Built with React and Node.js.
                         </p>
                     </a>
                 </div>
