--- a/socialmedia/index.html
+++ b/socialmedia/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>My Space</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link href="styles.css" rel="stylesheet" />
-    <script src="script.js"></script>
+    <script defer src="script.js"></script>
   </head>
-  <body onload="showLogin()">
-    <div id="root"></div>
+  <body onload="showLogin()" class="d-flex flex-column align-items-center mt-5">
+    <h1>My Space</h1>
+    <div id="root" class="mt-3"></div>
+    <button class="btn btn-primary mt-3" onclick="login()">Login</button>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
